--- a/app/diwi/trunk/client/web/pages/contact.html
+++ b/app/diwi/trunk/client/web/pages/contact.html
@@ -1,12 +1,10 @@
 <p>
-De Wichelroede wordt mede mogelijk gemaakt door Ruimte voor Geo-Informatie (RGI) en Provincie Utrecht en wordt uitgevoerd door een consortium waarin de volgende partners plaatsnemen: Alterra, DS, Galileo, Gemeente Utrecht, Kadaster TDN, KPN, Provincie Utrecht, Stichting Vernieuwing Gelderse Vallei (SVGV), Waag en Wageningen Universiteit. Voor meer informatie kunt u contact opnemen met: 
+De Wichelroede wordt mede mogelijk gemaakt door Ruimte voor Geo-Informatie (RGI) en Provincie Utrecht en wordt uitgevoerd door een consortium waarin de volgende partners plaatsnemen: Alterra, DS, Galileo, Gemeente Utrecht, Kadaster TDN, KPN, Provincie Utrecht, Stichting Vernieuwing Gelderse Vallei (SVGV), Waag en Wageningen Universiteit. 
 </p>
 <p>
-
-<a href="mailto:spam@spam.com" id="mail_to"> mail </a> of bel: 06 466 11 870
+Voor meer informatie kunt u contact opnemen: <br><br>
+<a href="mailto:spam@spam.com" id="mail_to"> email </a> <br><br>
 </p>
 <p>
-<small>
-Het project gebruikt met toestemming van Paul Roncken (WUR-KGR-LAR) de titel De Digitale Wichelroede &#169;
-</small>
+Indien u heeft ingeschreven voor een wandeling en bent onverwacht verhinderd of vertraagd bel dan naar uw startlocatie. De startlocaties zijn Paviljoen Grebbeberg te Rhenen, Hotel Witte Holevoet te Scherpenzeel en Restaurant De Dennen te Renswoude.	
 </p>
