aanmelden linkje utrecht

--- a/app/diwi/trunk/client/web/pages/welkom.html
+++ b/app/diwi/trunk/client/web/pages/welkom.html
@@ -24,7 +24,7 @@ U heeft zich al eens aangemeld als deelnemer aan de digitale wichelroede. <br>
 
 <p>
 <strong>Inloggen voor nieuwe bezoekers </strong><br>
-Gaat u voor het eerst inloggen? <a href="http://webgrs.wur.nl/cgi/projects/diwi/" target="_blank" ><br>
+Gaat u voor het eerst inloggen? <a href="http://webgrs.wur.nl/cgi/projects/diwi/Utrecht/" target="_blank" ><br>
 Klik dan hier om u voor het eerst aan te melden. </a>
 </p>
 
