nieuwe welkom pagina

--- a/app/diwi/trunk/client/web/pages/welkom.html
+++ b/app/diwi/trunk/client/web/pages/welkom.html
@@ -7,26 +7,16 @@ Struinen door het landschap, met een persoonlijke "Digitale Wichelroede" die int
 
 <p>
 <strong>Wat is een Digitale Wichelroede?</strong><br>
-De moderne "wichelroede" is geen wilge- of hazelaartak, maar een slim navigatie-apparaat waarmee veel te beleven valt. De recreant van nu wil namelijk steeds vaker het verhaal achter het landschap weten. Het liefst op een persoonlijke manier. De digitale wichelroede is een onderzoeksproject. Er is een eerste versie gebouwd met wetenswaardigheden rond de Grebbelinie in de provincies Utrecht en Gelderland. Er wordt getest op de Grebbeberg en in de gemeenten Renswoude en Scherpenzeel. Uiteindelijk moeten de resultaten leiden tot aanbevelingen hoe de nulversie tot een product kan worden uitgebouwd.
-</p>
-
-<br>
-
-<p>
-<strong>MEEDOEN</strong>
+De moderne "wichelroede" is geen wilge- of hazelaartak, maar een slim navigatie-apparaat waarmee veel te beleven valt. De recreant van nu wil namelijk steeds vaker het verhaal achter het landschap weten. Het liefst op een persoonlijke manier. De digitale wichelroede is een onderzoeksproject. Er is een eerste versie gebouwd met wetenswaardigheden rond de Grebbelinie in de provincies Utrecht en Gelderland en één met een zoektocht naar de Romeinse geschiedenis van de stad Utrecht. De gebruiktesten op de Grebbeberg en in de gemeenten Renswoude en Scherpenzeel hebben plaats gevonden in de maanden maart en april, 2008. In mei vindt de test plaats in het centrum van Utrecht. Uiteindelijk moeten de resultaten van de testen leiden tot aanbevelingen voor de ontwikkeling van een dergelijk product.
 </p>
 
 <p>
-<strong>Opnieuw aanmelding voor reeds aangemelde bezoekers </strong><br>
-U heeft zich al eens aangemeld als deelnemer aan de digitale wichelroede. <br>
-<a href="http://webgrs.wur.nl/cgi/projects/diwi/aanmelding/" target="_blank" > Klik hier om aan te geven wanneer u wilt gaan wandelen of fietsen. </a>
+<strong>Meedoen op 12 mei !</strong><br>
+U kunt u zich aanmelden voor de gebruiktest van de digitale wichelroede tijdens het feest van de geest vanaf het Domplein te Utrecht. <br>
+<a href="http://webgrs.wur.nl/cgi/projects/diwi/Utrecht/" target="_blank">Klik hier om u aan te melden (maximaal 30 deelnemers).*** </a>
+
 </p>
 
-<p>
-<strong>Inloggen voor nieuwe bezoekers </strong><br>
-Gaat u voor het eerst inloggen? <a href="http://webgrs.wur.nl/cgi/projects/diwi/Utrecht/" target="_blank" ><br>
-Klik dan hier om u voor het eerst aan te melden. </a>
-</p>
 
 
 </div>
