geoskating custom tiles: improve URL scheme (x,y,z iso khref)

--- a/app/geoskating/trunk/server/webapp/gs/mainmenu.html
+++ b/app/geoskating/trunk/server/webapp/gs/mainmenu.html
@@ -34,6 +34,7 @@
 				<li><a href="#" fn="GTAPP.mSetMap" arg="satellite">Satellite</a></li>
 				<li><a href="#" fn="GTAPP.mSetMap" arg="hybrid">Streets+Satellite</a></li>
 				<li><a href="#" fn="GTAPP.mSetMap" arg="blanc">Blanc</a></li>
+				<li><a href="#" fn="GTAPP.mSetMap" arg="mapnik">MapnikTest</a></li>
 			</ul>
 		</li>
 		<li><a href="#">Info</a>
