--- a/base/trunk/server/webapp/site/index.html
+++ b/base/trunk/server/webapp/site/index.html
@@ -28,6 +28,9 @@
 <hr/>
 
 <div id="highlitebox">
+	<h2>7Scenes</h2>
+	<p>February 24, 2008 - GeoTracing technology is the basis of <a href="http://7scenes.com">the 7scenes platform</a>.
+	</p>
 	<h2>GeoSailing Live</h2>
 	<p>June 7, 2007 - checkout <a href="http://www.geosailing.com/svr">www.geosailing.com/svr</a> the coming 3 days,
 	a live GeoTracing event...</p>
@@ -58,7 +61,7 @@
 	</p>
 	<hr/>
 	<p>
-		<a href="/gt/srv/randomimagepage.jsp" >surprise me &gt;&gt;</a>
+		<a href="/gt/srv/randomimagepage.jsp" >random traceland images &gt;&gt;</a>
 	</p>
 </div>
 
@@ -74,7 +77,8 @@
 
 <h2>Applications</h2>
 <p>
-	The following applications have been or are being developed with GeoTracing.
+	The following applications have been or are being developed with GeoTracing. The main line
+	of development is now (2008) done within <a href="http://7scenes.com">the 7scenes platform</a>.
 </p>
 <table cellspacing="0" cellpadding="4" border="0">
 <tr>
