all: updates for move to new server

--- a/base/trunk/server/webapp/site/index.html
+++ b/base/trunk/server/webapp/site/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta content="GPS, GPRS, Mobile phone, Java, J2ME, where to skate, GeoTracing, GeoDrawing, GPSDrawing, inline skating, skeeler"
-		  name="KeyWords"/>
+	      name="KeyWords"/>
 	<meta content="Just van den Broecke" name="Author"/>
 	<meta content="GeoSkating, draw skate routes with GPS and mobile phones" name="Description"/>
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -20,7 +20,7 @@
 </p>
 
 <p>
-	<a href="http://www.geotracing.com/gt">[TraceLand]</a>&nbsp;&nbsp;
+	<a href="http://geotracing.com/tland">[TraceLand]</a>&nbsp;&nbsp;
 	<a href="mobitracer.html">[MobiTracer]</a>&nbsp;&nbsp;
 	<a href="presentation/index.html">[Presentation]</a>&nbsp;&nbsp;
 	<a href="wiki">[Documentation]</a>&nbsp;&nbsp;
@@ -28,22 +28,40 @@
 <hr/>
 
 <div id="highlitebox">
+	<h2>New Server/Mobitracer</h2>
+
+	<p>march 14, 2009 - this site/<a href="http://geotracing.com/tland">TraceLand</a>/mobitracer etc are now all
+		migrated to <a href="http://7scenes.com">the 7scenes platform</a>, not all may be working yet....
+	</p>
+
 	<h2>7Scenes</h2>
-	<p>February 24, 2008 - GeoTracing technology is the basis of <a href="http://7scenes.com">the 7scenes platform</a>.
+
+	<p>September 24, 2008 - GeoTracing technology is the basis of <a href="http://7scenes.com">the 7scenes platform</a>.
 	</p>
+
 	<h2>GeoSailing Live</h2>
-	<p>June 7, 2007 - checkout <a href="http://www.geosailing.com/svr">www.geosailing.com/svr</a> the coming 3 days,
-	a live GeoTracing event...</p>
+
+	<p>June 7, 2008 - check out <a href="http://www.geosailing.com/svr2008">www.geosailing.com/svr2008</a> the coming 3
+		days,
+		a live GeoTracing event...</p>
+
 	<h2>Featured Tracks</h2>
+
 	<p>
-		Feb 14, 2007 (!). <a href="http://www.geotracing.com/gt/?cmd=showtrack&user=lavitaebella&id=2616489&zoom=14&map=blanc">Lavitaebella walks a heart</a>.
+		Feb 14, 2007 (!). <a
+			href="http://geotracing.com/tland/?cmd=showtrace&user=lavitaebella&id=73918&zoom=14&map=blanc">Lavitaebella
+		walks a heart</a>.
 	</p>
+
 	<p>
 		Nov 29, 2006. A team of friends, <a href="http://www.vrienden-team.com" target="_new">"VriendenTeam"</a> uses
-		GeoTracing to track their route/photos in the <a href="http://www.amsterdamdakar.com/">Amsterdam Dakar Challenge</a>
+		GeoTracing to track their route/photos in the <a href="http://www.amsterdamdakar.com/">Amsterdam Dakar
+		Challenge</a>
 	</p>
+
 	<p>
-		<a href="http://www.geotracing.com/gt/?cmd=live&user=vrienden-team&zoom=5&map=streets">Follow the VriendenTeam live &gt;&gt;</a><br/>
+		<a href="http://geotracing.com/tland/?cmd=live&user=vrienden-team&zoom=5&map=streets">Follow the VriendenTeam
+			live &gt;&gt;</a><br/>
 	</p>
 	<hr/>
 	<p>During Sept 12-14, 2006 Just has been
@@ -52,17 +70,20 @@
 		Switzerland. Below are the tracks/photo's </p>
 
 	<p>
-		<a href="http://www.geotracing.com/gt/?cmd=showtrack&id=1731700&user=just&zoom=13&map=streets">FOSS4G - sept 12,
+		<a href="http://geotracing.com/tland/?cmd=showtrace&id=73762&user=just&zoom=13&map=streets">FOSS4G - sept 12,
 			2006 &gt;&gt;</a><br/>
-		<a href="http://www.geotracing.com/gt/?cmd=showtrack&id=1737880&user=just&zoom=13&map=streets">FOSS4G - sept 13,
+		<a href="http://geotracing.com/tland/?cmd=showtrace&id=73764&user=just&zoom=13&map=streets">FOSS4G - sept 13,
 			2006 &gt;&gt;</a><br/>
-		<a href="http://www.geotracing.com/gt/?cmd=showtrack&id=1744228&user=just&zoom=13&map=streets">FOSS4G - sept 14,
+		<a href="http://geotracing.com/tland/?cmd=showtrace&id=73766&user=just&zoom=13&map=streets">FOSS4G - sept 14,
 			2006 (+social event) &gt;&gt;</a><br/>
 	</p>
 	<hr/>
-	<p>
-		<a href="/gt/srv/randomimagepage.jsp" >random traceland images &gt;&gt;</a>
-	</p>
+	<table border="0" cellspacing="0" cellpadding="4">
+		<tr>
+			<td><img src="tland/media.srv?id=*&resize=240x180" alt="Random Image"/></td>
+			<td><img src="tland/media.srv?id=*&resize=240x180" alt="Random Image"/></td>
+		</tr>
+	</table>
 </div>
 
 <h2>About</h2>
@@ -71,132 +92,146 @@
 	GeoTracing is a software platform for creating multimedial geo-applications.
 	These applications have in common that they allow you to tell your multimedial story
 	about your movement through the landscape, whether on foot, skates, by bike or other means.
-	View for example <a href="http://www.geotracing.com/gt" target="new">the TraceLand application.</a>
+	View for example <a href="http://geotracing.com/tland" target="new">the TraceLand application.</a>
 	You can there sign up and download the <a href="mobitracer.html">MobiTracer mobile client</a>.
 </p>
 
 <h2>Applications</h2>
+
 <p>
 	The following applications have been or are being developed with GeoTracing. The main line
 	of development is now (2008) done within <a href="http://7scenes.com">the 7scenes platform</a>.
 </p>
 <table cellspacing="0" cellpadding="4" border="0">
-<tr>
+	<tr>
 
-	<td align="center">
-		<p>
+		<td align="center">
+			<p>
 
-			<a target="_new" href="http://www.geotracing.com/gt">
-				<img src="img/gt-traceland.jpg" border="0" title="the GeoTracing testbed application" alt="traceland"><br>
-				Traceland
-			</a>
-		</p>
-	</td>
+				<a target="_new" href="http://geotracing.com/tland">
+					<img src="img/gt-traceland.jpg" border="0" title="the GeoTracing testbed application"
+					     alt="traceland"><br>
+					Traceland
+				</a>
+			</p>
+		</td>
 
-	<td align="center">
-		<p>
-			<a target="_new" href="http://www.geoskating.com">
-				<img src="img/gt-geoskating.jpg" title="create media-annotated skate-maps that show asphalt quality" alt="geoskating" border="0"><br>
-				GeoSkating
-			</a>
-		</p>
-	</td>
+		<td align="center">
+			<p>
+				<a target="_new" href="http://geoskating.com">
+					<img src="img/gt-geoskating.jpg" title="create media-annotated skate-maps that show asphalt quality"
+					     alt="geoskating" border="0"><br>
+					GeoSkating
+				</a>
+			</p>
+		</td>
 
-	<td align="center">
-		<p>
+		<td align="center">
+			<p>
 
-			<a target="_new" href="http://www.n8spel.nl">
-				<img src="img/gt-n8spel.jpg" title="a multimedial geodrawing game for the Amsterdam Museum Night nov 2005"  alt="n8spel" border="0"><br>
-				N8Spel
-			</a>
+				<a target="_new" href="http://www.n8spel.nl">
+					<img src="img/gt-n8spel.jpg"
+					     title="a multimedial geodrawing game for the Amsterdam Museum Night nov 2005" alt="n8spel"
+					     border="0"><br>
+					N8Spel
+				</a>
 
-		</p>
-	</td>
-</tr>
+			</p>
+		</td>
+	</tr>
 
-<tr>
-	<td align="center">
-		<p>
-			<a target="_new" href="http://www.bliin.com">
-				<img src="img/gt-bliin.jpg" title="the coolest GeoTracing app: navigate geotagged experiences" alt="bliin" border="0"><br>
-				Bliin
-			</a>
-		</p>
-	</td>
-	<td align="center">
-		<p>
-			<a target="_new" href="http://www.mlgk.nl">
-				<img src="img/gt-mlgk.jpg" title="Create and play locative mobile games (cooperation with Waag Society)"border="0"><br>
-				Mobile Learning Game Kit
-			</a>
-		</p>
-	</td>
-	<td align="center">
-		<p>
+	<tr>
+		<td align="center">
+			<p>
+				<a target="_new" href="http://bliin.com">
+					<img src="img/gt-bliin.jpg" title="the coolest GeoTracing app: navigate geotagged experiences"
+					     alt="bliin" border="0"><br>
+					Bliin
+				</a>
+			</p>
+		</td>
+		<td align="center">
+			<p>
+				<a target="_new" href="http://www.waag.org/project/mlgk">
+					<img src="img/gt-mlgk.jpg"
+					     title="Create and play locative mobile games (cooperation with Waag Society)" border="0"><br>
+					Mobile Learning Game Kit
+				</a>
+			</p>
+		</td>
+		<td align="center">
+			<p>
 
-			<a target="_new" href="http://www.geosailing.com" >
-				<img src="img/gt-geosailing.jpg" title="create media-annotated sailing-tracks" alt="geosailing" border="0"><br>
-				GeoSailing
-			</a>
-		</p>
-	</td>
+				<a target="_new" href="http://www.geosailing.com">
+					<img src="img/gt-geosailing.jpg" title="create media-annotated sailing-tracks" alt="geosailing"
+					     border="0"><br>
+					GeoSailing
+				</a>
+			</p>
+		</td>
 
 
+	</tr>
+	<tr>
+		<td align="center">
+			<p>
+				<a target="_new" href="http://www.senseofthecity.nl">
+					<img src="img/gt-sotce.jpg" title="civilians trace Dutch city of Eindhoven (april 2006)"
+					     alt="senseofthecity" border="0"><br>
+					SenseOfTheCity
+				</a>
+			</p>
+		</td>
+		<td align="center">
+			<p>
+				<a target="_new" href="http://www.senseofbrainport.nl">
+					<img src="img/gt-sobp.jpg"
+					     title="people from the Brainport community tracing their area (SE Brabant, Netherlands)"
+					     alt="senseofbrainport" border="0"><br>
+					SenseOfBrainport
+				</a>
+			</p>
+		</td>
 
-</tr>
-<tr>
-	<td align="center">
-		<p>
-			<a target="_new" href="http://www.senseofthecity.nl">
-				<img src="img/gt-sotce.jpg" title="civilians trace Dutch city of Eindhoven (april 2006)" alt="senseofthecity" border="0"><br>
-				SenseOfTheCity
-			</a>
-		</p>
-	</td>
-	<td align="center">
-		<p>
-			<a target="_new" href="http://www.senseofthecity.nl/sobp">
-				<img src="img/gt-sobp.jpg" title="people from the Brainport community tracing their area (SE Brabant, Netherlands)" alt="senseofbrainport" border="0"><br>
-				SenseOfBrainport
-			</a>
-		</p>
-	</td>
+		<td align="center">
+			<p>
+				<a target="_new" href="http://www.geotracing.com/otter">
+					<img src="img/gt-ottertracing.jpg" title="Field-observation of otters in The Netherlands (with SON)"
+					     alt="ottertracing" border="0"><br>
+					OtterTracing
+				</a>
+			</p>
+		</td>
 
-	<td align="center">
-		<p>
-			<a target="_new" href="http://www.geotracing.com/otter">
-				<img src="img/gt-ottertracing.jpg" title="Field-observation of otters in The Netherlands (with SON)" alt="ottertracing" border="0"><br>
-				OtterTracing
-			</a>
-		</p>
-	</td>
+	</tr>
+	<tr>
+		<td align="center">
+			<p>
 
-</tr>
-<tr>
-	<td align="center">
-		<p>
+				<a target="_new" href="http://www.geobiking.com">
+					<img src="img/gt-geobiking.jpg"
+					     title="create media-annotated bicycle tracks (in progress, volunteers?)" alt="" border="0"><br>
+					GeoBiking
+				</a>
+			</p>
+		</td>
 
-			<a target="_new" href="http://www.geobiking.com">
-				<img src="img/gt-geobiking.jpg" title="create media-annotated bicycle tracks (in progress, volunteers?)" alt="" border="0"><br>
-				GeoBiking
-			</a>
-		</p>
-	</td>
+		<td align="center">
+			<p>
 
-	<td align="center">
-		<p>
+				<a target="_new" href="http://www.waag.org/project/digitalewichelroede">
+					<img src="img/gt-diwi.jpg"
+					     title="create personalized routes (cooperation with Waag Society, WUR, Alterra)" alt=""
+					     border="0"><br>
+					Digital Dowsing Rod
+				</a>
+			</p>
+		</td>
+		<td align="center">
+			&nbsp;
+		</td>
 
-			<a target="_new" href="http://www.digitalewichelroede.nl">
-				<img src="img/gt-diwi.jpg" title="create personalized routes (cooperation with Waag Society, WUR, Alterra)" alt="" border="0"><br>
-				Digital Dowsing Rod
-			</a>
-		</p>
-	</td>
-	<td align="center">
-		&nbsp;
-	</td>
-
-</tr>
+	</tr>
 
 </table>
 
@@ -239,21 +274,21 @@
 <h2>Features</h2>
 
 <p>
-	<ul>
-		<li>record GPS tracklogs remotely from mobile phone</li>
-		<li>create GPS tracklogs remotely by (GPX) upload</li>
-		<li>submit and relate media (audio/video/images/text) to points in GPS tracklogs</li>
-		<li>annotate tracklogs with route parameters (e.g asphalt rating, sceneray rating)</li>
-		<li>create overlayed maps by combining tracklogs</li>
-		<li>live/real-time tracing in browser</li>
-		<li>view and play back tracks in browser</li>
-		<li>Location Based Services (LBS) through trigger on geotagged objects (e.g. media)</li>
-		<li>portal functions: personal tracklogs and media</li>
-		<li>tagging: give tags to any items (tracks, media persons)</li>
-		<li>commenting: provide comments on any item (tracks, media persons)</li>
-		<li>extensibility: server-side plug-ins</li>
-		<li>open/XML-based protocols: create clients in any technology</li>
-	</ul>
+<ul>
+	<li>record GPS tracklogs remotely from mobile phone</li>
+	<li>create GPS tracklogs remotely by (GPX) upload</li>
+	<li>submit and relate media (audio/video/images/text) to points in GPS tracklogs</li>
+	<li>annotate tracklogs with route parameters (e.g asphalt rating, sceneray rating)</li>
+	<li>create overlayed maps by combining tracklogs</li>
+	<li>live/real-time tracing in browser</li>
+	<li>view and play back tracks in browser</li>
+	<li>Location Based Services (LBS) through trigger on geotagged objects (e.g. media)</li>
+	<li>portal functions: personal tracklogs and media</li>
+	<li>tagging: give tags to any items (tracks, media persons)</li>
+	<li>commenting: provide comments on any item (tracks, media persons)</li>
+	<li>extensibility: server-side plug-ins</li>
+	<li>open/XML-based protocols: create clients in any technology</li>
+</ul>
 </p>
 
 <h2>Technologies</h2>
