--- a/base/trunk/server/webapp/site/mobitracer.html
+++ b/base/trunk/server/webapp/site/mobitracer.html
@@ -19,7 +19,7 @@
 </p>
 <p>
 <a href="index.html">[Home]</a>&nbsp;&nbsp;
-<a href="http://www.geotracing.com/gt">[TraceLand]</a>&nbsp;&nbsp;
+<a href="http://geotracing.com/tland">[TraceLand]</a>&nbsp;&nbsp;
 <a href="mobitracer.html">[MobiTracer]</a>&nbsp;&nbsp;
 <a href="presentation/index.html">[Presentation]</a>&nbsp;&nbsp;
 <a href="wiki">[Documentation]</a>&nbsp;&nbsp;
@@ -42,7 +42,7 @@ Users that are trying out MobiTracer can find more specific notes
 </p>
 <h2>Getting MobiTracer</h2>
 <p>
-Go to <a href="http://www.geotracing.com/gt">www.geotracing.com/gt</a> and select "My|Login".
+Go to <a href="http://geotracing.com/tland">www.geotracing.com/tland</a> and select "My|Login".
 </p>
 <h2>Screenshots</h2>
 <p>Through the screenshots below some of the main features are shown.
@@ -179,7 +179,7 @@ the "hdop" values (should be about less than 2 or 3).
 </p>
 <h2>Viewing Your Tracks</h2>
 <p>
-View them at <a href="http://www.geotracing.com/gt">www.geotracing.com/gt</a>, the TraceLand page.
+View them at <a href="http://geotracing.com/tland">www.geotracing.com/tland</a>, the TraceLand page.
 Use the menu to show live or archived tracks (Show). You can change the background map with Map menu.
 </p>
 <h2>It doesn't work !</h2>
