--- a/base/trunk/server/webapp/site/presentation/index.html
+++ b/base/trunk/server/webapp/site/presentation/index.html
@@ -206,7 +206,7 @@ Source: <a href="http://www.aero.org/education/primers/gps/" target="_new">GPS P
 <table border="0" cellspacing="4" cellpadding="8">
 	<tr>
 		<td align="center">
-			<a href="http://www.geotracing.com/gt" target="_new">
+			<a href="http://geotracing.com/tland" target="_new">
 				<img src="assets/traceland.jpg" width="200" height="150" alt="traceland" /><br/>
 			Traceland</a>
 		</td>
@@ -286,7 +286,7 @@ Source: <a href="http://www.aero.org/education/primers/gps/" target="_new">GPS P
 <ul>
 <li>Sign up and login
 <ul>
-	<li>go to <a href="http://www.geotracing.com/gt">Traceland app</a></li>
+	<li>go to <a href="http://geotracing.com/tland">Traceland app</a></li>
 	<li>select "My | Login"</li>
 	<li>sign up</li>
 	<li>login</li>
@@ -558,7 +558,7 @@ http://www..../get.jsp?cmd=q-active-tracks
 	<li>create application dir</li>
 	<li>create configuration files</li>
 	<li>create files extending/replacing base files (e.g. JS)</li>
-	<li>refer default app (<a href="http://www.geotracing.org/gt" target="_new">Traceland</a>) as a base</li>
+	<li>refer default app (<a href="http://www.geotracing.org/tland" target="_new">Traceland</a>) as a base</li>
 	<li>unpacked gt.war is overwritten with your replacements</li>
 	<li>generate your .war</li>
 	<li>see examples in <a href="http://svn.codehaus.org/geotracing/app" target="_new">Subversion apps tree</a></li>
