--- a/base/trunk/server/webapp/site/presentation/history.html
+++ b/base/trunk/server/webapp/site/presentation/history.html
@@ -197,11 +197,11 @@
 
 		<div id="w10" class="waypoint" style="left: 930px; top: 395px; ">
 			<div class="url">
-				<a href="http://www.geotracing.com/gt"></a>
+				<a href="http://geotracing.com/tland"></a>
 			</div>
 		</div>
 		<div id="i10" class="info">
-			<div class="title">11. TraceLand [www.geotracing.com/gt]</div>
+			<div class="title">11. TraceLand [www.geotracing.com/tland]</div>
 			<ul>
 				<li>TraceLand - sandbox for GeoTracing experiments</li>
 			</ul>
